start script added for automate

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "express-first",
+  "name": "express-first-app-contact-form",
   "version": "1.0.0",
   "description": "Simple Express ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
-  "author": "",
+  "author": "Sharad Shinde",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
